test/negative/003_unterminated_comment.fx
// expect: unterminated comment
val a = 1
/* this comment never ends
println(a)
