test/negative/003_unterminated_comment.err
003_unterminated_comment.fx:5:0: error: unterminated comment
